[gd_scene load_steps=5 format=3 uid="uid://f5h7rwwtxus"]

[ext_resource type="Texture2D" uid="uid://dhqeokelops1p" path="res://assets/UI/title_screen.png" id="1_qg6w6"]
[ext_resource type="Script" path="res://scenes/ui/title_screen.gd" id="2_kfdw1"]
[ext_resource type="Texture2D" uid="uid://dtsawogvgumm5" path="res://assets/UI/title_button.png" id="2_nb1q1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4fci3"]
texture = ExtResource("2_nb1q1")

[node name="TitleScreen" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_qg6w6")
script = ExtResource("2_kfdw1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.623529, 0.419608, 0.207843, 1)
theme_override_colors/font_pressed_color = Color(0.764706, 0.619608, 0.376471, 1)
theme_override_colors/font_hover_color = Color(0.764706, 0.619608, 0.376471, 1)
theme_override_colors/font_focus_color = Color(0.764706, 0.619608, 0.376471, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_4fci3")
theme_override_styles/hover = SubResource("StyleBoxTexture_4fci3")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4fci3")
theme_override_styles/focus = SubResource("StyleBoxTexture_4fci3")
text = "新游戏"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.623529, 0.419608, 0.207843, 1)
theme_override_colors/font_pressed_color = Color(0.764706, 0.619608, 0.376471, 1)
theme_override_colors/font_hover_color = Color(0.764706, 0.619608, 0.376471, 1)
theme_override_colors/font_focus_color = Color(0.764706, 0.619608, 0.376471, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_4fci3")
theme_override_styles/hover = SubResource("StyleBoxTexture_4fci3")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4fci3")
theme_override_styles/focus = SubResource("StyleBoxTexture_4fci3")
text = "继续游戏"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.623529, 0.419608, 0.207843, 1)
theme_override_colors/font_pressed_color = Color(0.764706, 0.619608, 0.376471, 1)
theme_override_colors/font_hover_color = Color(0.764706, 0.619608, 0.376471, 1)
theme_override_colors/font_focus_color = Color(0.764706, 0.619608, 0.376471, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_4fci3")
theme_override_styles/hover = SubResource("StyleBoxTexture_4fci3")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4fci3")
theme_override_styles/focus = SubResource("StyleBoxTexture_4fci3")
text = "退出游戏"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 730.0
offset_top = 190.0
offset_right = 1213.0
offset_bottom = 368.0
theme_override_colors/font_color = Color(0.0117647, 0.388235, 0.447059, 1)
theme_override_colors/font_shadow_color = Color(0.0470588, 0.0392157, 0.0352941, 1)
theme_override_colors/font_outline_color = Color(0.52549, 0.317647, 0.145098, 1)
theme_override_constants/shadow_offset_x = -12
theme_override_constants/shadow_offset_y = -2
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 128
text = "IsoLand"

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
